@@ -540,7 +540,7 @@ static int print_txt(struct dns_header *header, const size_t qlen, char *name,
    expired and cleaned out that way. 
    Return 1 if we reject an address because it look like part of dns-rebinding attack. */
 int extract_addresses(struct dns_header *header, size_t qlen, char *name, time_t now, 
-		      char **ipsets, int is_sign, int check_rebind, int no_cache_dnssec,
+		      char **ipsets, char **nftsets, int is_sign, int check_rebind, int no_cache_dnssec,
 		      int secure, int *doctored)
 {
   unsigned char *p, *p1, *endrr, *namep;
@@ -846,6 +846,17 @@ int extract_addresses(struct dns_header *header, size_t qlen, char *name, time_t
 			{
 			  log_query((flags & (F_IPV4 | F_IPV6)) | F_IPSET, name, &addr, *ipsets_cur);
 			  add_to_ipset(*ipsets_cur++, &addr, flags, 0);
+			}
+		    }
+#endif
+#ifdef HAVE_NFTSET
+		  if (nftsets && (flags & (F_IPV4 | F_IPV6)))
+		    {static char **nftsets_cur;
+		      nftsets_cur = nftsets;
+		      while (*nftsets_cur)
+			{
+			  log_query((flags & (F_IPV4 | F_IPV6)) | F_NFTSET, name, &addr, *nftsets_cur);
+			  add_to_nftset(*nftsets_cur++, &addr, flags, 0);
 			}
 		    }
 #endif
